--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
-/* Your CSS Code here. */
+/* Your CSS Code here. */.holder {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.item {
+  width: 100px; /* Adjust as needed */
+  height: 100px; /* Adjust as needed */
+	background-color: blue;
+}
